_sass/_main.scss
$unopinionated_color: #88888840;

html {
	scroll-behavior: smooth;
}

@media (prefers-color-scheme: dark) {

}

@media screen and (prefers-reduced-motion: reduce) {
	html {
		scroll-behavior: auto;
	}
}

body {
	font-family: Ubuntu, system-ui, sans-serif;
	-webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
	line-height: 1.5;
	font-size: 1rem;
	font-weight: 300;
	color: rgb(22, 23, 26);
}

nav ul {
	border-right: 1px solid $unopinionated_color;
	margin-block-start: 0;
	margin-block-end: 0;
	padding-inline-start: 0;
	padding-inline-end: 0;
}

a {
    color: #000;
    text-decoration-skip-ink: auto;
    text-decoration: underline;
}

a:hover {
	text-decoration: none;
	color: #555;
}

#theme-toggle::before {
	display: inline;
	content: '🌛';
}

@mixin dark_theme {
	html {
		content: 'dark';
	}

	body {
		color: rgb(233, 232, 229);
		background-color: #333;
	}

	a {
		color: #eee;
	}

	a:hover {
		color: #bbb;
	}

	#theme-toggle::before {
		content: '🌞';
	}

	input {
		color: rgb(233, 232, 229);
	}
}

html[data-theme="dark"] {
	@include dark_theme();
}

@media (prefers-color-scheme: dark) {
	@include dark_theme();	

	#theme-toggle-item {
		display: none;
	}
}

*:target {
	animation: colorize 2s normal;
	animation-iteration-count: 2;
}

sup:target a {
	animation: pulse 1s normal;
	animation-iteration-count: 3;
}

sup:target::before {
	content: '[';
}

sup:target::after {
	content: ']';
}

@keyframes pulse {
	50% {
		background-color: #88888888;
	}
}

@keyframes colorize {
	33% {
		color: #44bb88;
	}

	66% {
		color: #bb4488;
	}

	100% {
		
	}
}

#search-container {
	max-width: 100%;
}

input[type=text] {
	font-size: normal;
	outline: none;
	padding: 1rem;
	background: $unopinionated_color;
	width: 100%;
	-webkit-appearance: none;
	font-family: inherit;
	font-size: 100%;
	border: none;
}

div > ol, *[class="posts"] > ul {
	padding-inline-start: 0;
	padding-inline-end: 0;
}

#results-container {
	margin: .5rem 0;
}

.post p {
	margin: .5rem 0;
}

.post h1, .post h2, .post h3, .post h4 {
	margin: 1rem 0;
}

.post h2:first-child, .project h2:first-child, .photo h2:first-child {
	margin-top: 0;
}

pre, code {
	background: $unopinionated_color;
	border-radius: 2px;
	padding: .2rem;
}

pre code {
	border: none;
	background: none;
}

code {
	padding: .1rem;
}

pre {
	padding: 1rem;
	overflow-x: auto;
	margin: .5rem 0;
	padding: .5rem;
}

img {
	max-width:100%;
}

hr {
	background: $unopinionated_color;
    height: 1px;
    border: 0;
}

header {
	flex-basis:10rem;
	flex-grow:1;
	position:relative;
}

header a {
	text-decoration: none;
}

header li {
	margin-bottom: .2rem;
	text-align: right;
	margin-right: 2rem;
}

header a.active {
	font-weight: bold;
}

header,section {
	padding:1rem;
}

blockquote {
	font-style: italic;
    border-left: 5px solid #88888840;
    padding-left: 1rem;
}

h1, h2, h3, h4, h5 {
	line-height: 1;
	margin: 1rem 0;
	font-weight: 600;
}

section h1:first-child {
	margin-top: 0;
}

strong, b {
	font-weight: bold;
}

.photos ul {
	list-style: none;
}

section[class="post"] img {
	width: 70%;	
	display: flex;	
	margin-left: auto;
	margin-right: auto;
	background: $unopinionated_color;
	padding: 5px;
	border-radius: 10px;
	margin-top: 10px;
	margin-bottom: 10px;
}

.photos li {
	margin-bottom: 1.5rem;
}

.photo picture, .project picture {
	margin-bottom: 0.5rem;
}

.posts ul,header ul {
	list-style:none;
}

.posts li {
	align-items:center;
	display:flex;
	justify-content:space-between;
	margin-bottom: .5rem;
}

.posts li a, .posts li div, .projects li a {
	white-space:nowrap;
	overflow:hidden;
	text-overflow:ellipsis;
	text-decoration: none;
}

.posts li time, .projects li time {
	padding-left: 1rem;
	white-space: nowrap;
	font-variant-numeric: tabular-nums;
}

.post ul, .project ul, .post ol {
	//list-style-position: inside;
}

main {
	display: flex;
	flex-wrap: wrap;
	max-width: 60rem;
	margin: 2rem auto;
	padding: 1rem;
}

.meta {
	margin: .5rem 0;
}

@media screen and (max-width: 49rem) {
	header li {
	    display: inline-flex;
		margin-right: 1rem;
	}

	.logo {
		padding-bottom: 1rem;
	}

	header ul {
		border-bottom: 1px solid $unopinionated_color;
		padding-bottom: 2rem;
		text-align: center;
	}

	nav ul {
	    border-right: 0;
	}

	.photos ul {
		margin-top: 0.5rem;
	}

	section[class="post"] img {
		width: initial;	
	}
}

section {
	flex-basis:0;
	flex-grow:999;
	min-width:70%;
	display:flex;
	flex-direction:column;
}

figcaption {
    font-size: smaller;
}

